# funct_utils

funct_utils/: README.md  pyproject.toml  setup.py
funct_utils/funct_utils/: __init__.py  core.py
funct_utils/funct_utils.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
