[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "funct_utils"
version = "0.1.0"
description = "Libreria per calcolo FWHM e rilevamento picchi"
authors = [
  { name="Il Tuo Nome", email="tuo@email.com" }
]
dependencies = ["numpy"]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/Alberto260699/funct_utils"
